NetBSD Problem Report #46871

From www@NetBSD.org  Wed Aug 29 11:23:23 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id BCD7363B8E6
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 29 Aug 2012 11:23:23 +0000 (UTC)
Message-Id: <20120829112323.3A0A563B86D@www.NetBSD.org>
Date: Wed, 29 Aug 2012 11:23:23 +0000 (UTC)
From: thd@lavabit.com
Reply-To: thd@lavabit.com
To: gnats-bugs@NetBSD.org
Subject: "wsconsctl: WSKBDIO_SETENCODING: Invalid argument" during boot
X-Send-Pr-Version: www-1.0

>Number:         46871
>Category:       install
>Synopsis:       "wsconsctl: WSKBDIO_SETENCODING: Invalid argument" during boot
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    install-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Aug 29 11:25:01 +0000 2012
>Closed-Date:    Mon Jul 14 10:06:38 +0000 2014
>Last-Modified:  Fri Aug 08 06:55:00 +0000 2014
>Originator:     thd
>Release:        6.0_RC1
>Organization:
>Environment:
NetBSD master.ajila 6.0_RC1 NetBSD 6.0_RC1 (GENERIC) amd64
>Description:
Firstly, excuse my bad english...

During install, I chose "be" for the keyboard encoding.

After a reboot, I get this message:

"wsconsctl: WSKBDIO_SETENCODING: Invalid argument"

Now, I use "fr" as a fallback encoding.

This problem existed already in the previous release (5.0).

This is not a critical problem but it's very frustrating for belgian users.

Thanks a lot for all your hard work!
>How-To-Repeat:
Just install NetBSD for amd64
>Fix:

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: mbalmer@NetBSD.org
State-Changed-When: Mon, 14 Jul 2014 10:06:38 +0000
State-Changed-Why:
I added a belgian keyboard layout in NetBSD-current.


From: "Marc Balmer" <mbalmer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46871 CVS commit: src/sys/dev
Date: Mon, 14 Jul 2014 10:05:24 +0000

 Module Name:	src
 Committed By:	mbalmer
 Date:		Mon Jul 14 10:05:24 UTC 2014

 Modified Files:
 	src/sys/dev/pckbport: wskbdmap_mfii.c
 	src/sys/dev/usb: ukbdmap.c

 Log Message:
 Add a belgian keyboard layout, based on the french keyboard layout.
 Fixes PR install/46871.


 To generate a diff of this commit:
 cvs rdiff -u -r1.24 -r1.25 src/sys/dev/pckbport/wskbdmap_mfii.c
 cvs rdiff -u -r1.28 -r1.29 src/sys/dev/usb/ukbdmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46871 CVS commit: [netbsd-6] src/sys/dev
Date: Thu, 7 Aug 2014 08:33:36 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Thu Aug  7 08:33:36 UTC 2014

 Modified Files:
 	src/sys/dev/pckbport [netbsd-6]: wskbdmap_mfii.c
 	src/sys/dev/usb [netbsd-6]: ukbdmap.c

 Log Message:
 Pull up following revision(s) (requested by mbalmer in ticket #1099):
 	sys/dev/usb/ukbdmap.c: revision 1.29
 	sys/dev/pckbport/wskbdmap_mfii.c: revision 1.25
 Add a belgian keyboard layout, based on the french keyboard layout.
 Fixes PR install/46871.


 To generate a diff of this commit:
 cvs rdiff -u -r1.22 -r1.22.8.1 src/sys/dev/pckbport/wskbdmap_mfii.c
 cvs rdiff -u -r1.28 -r1.28.16.1 src/sys/dev/usb/ukbdmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46871 CVS commit: [netbsd-5] src/sys/dev
Date: Fri, 8 Aug 2014 06:50:12 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Fri Aug  8 06:50:12 UTC 2014

 Modified Files:
 	src/sys/dev/pckbport [netbsd-5]: wskbdmap_mfii.c
 	src/sys/dev/usb [netbsd-5]: ukbdmap.c

 Log Message:
 Pull up following revision(s) (requested by mbalmer in ticket #1915):
 	sys/dev/usb/ukbdmap.c: revision 1.29
 	sys/dev/pckbport/wskbdmap_mfii.c: revision 1.25
 Add a belgian keyboard layout, based on the french keyboard layout.
 Fixes PR install/46871.


 To generate a diff of this commit:
 cvs rdiff -u -r1.15.8.5 -r1.15.8.6 src/sys/dev/pckbport/wskbdmap_mfii.c
 cvs rdiff -u -r1.20.8.2 -r1.20.8.3 src/sys/dev/usb/ukbdmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.