Add a belgian keyboard layout, based on the french keyboard layout. Fixes PR install/46871.